tests/ui/typeck/gather-locals-twice.stderr
error[E0368]: binary assignment operation `+=` cannot be applied to type `()`
  --> $DIR/gather-locals-twice.rs:4:5
   |
LL |     () += { let x; };
   |     --^^^^^^^^^^^^^^
   |     |
   |     cannot use `+=` on type `()`

error[E0067]: invalid left-hand side of assignment
  --> $DIR/gather-locals-twice.rs:4:8
   |
LL |     () += { let x; };
   |     -- ^^
   |     |
   |     cannot assign to this expression

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0067, E0368.
For more information about an error, try `rustc --explain E0067`.
